# kirigami-app-components

./: .contextProperties.ini  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  KF6KirigamiActionCollectionConfig.cmake.in  KirigamiAppComponentsConfig.cmake.in  Main.qml  README.md  REUSE.toml  actioncollection.cpp  actioncollection.h  actiondata.cpp  actiondata.h  actionsrc  kirigamiactioncollection.qdocconf  main.cpp  metainfo.yaml  shortcutsmodel.cpp  shortcutsmodel.h
autotests/: CMakeLists.txt  qmltest.cpp  tst_actioncollection.qml
docs/includes/: icongroup.qdocinc
po/ar/: kirigami-app-components.po
po/ca/: kirigami-app-components.po
po/ca@valencia/: kirigami-app-components.po
po/de/: kirigami-app-components.po
po/es/: kirigami-app-components.po
po/fr/: kirigami-app-components.po
po/he/: kirigami-app-components.po
po/it/: kirigami-app-components.po
po/ka/: kirigami-app-components.po
po/ko/: kirigami-app-components.po
po/lt/: kirigami-app-components.po
po/nl/: kirigami-app-components.po
po/nn/: kirigami-app-components.po
po/pt_BR/: kirigami-app-components.po
po/sk/: kirigami-app-components.po
po/sl/: kirigami-app-components.po
po/tr/: kirigami-app-components.po
po/ug/: kirigami-app-components.po
po/uk/: kirigami-app-components.po
po/zh_CN/: kirigami-app-components.po
po/zh_TW/: kirigami-app-components.po
src/: CMakeLists.txt  KF6KirigamiActionCollectionConfig.cmake.in  Messages.sh  actioncollection.cpp  actioncollection.h  actioncollection_p.h  actioncollections.cpp  actioncollections.h  actioncollections_p.h  actiondata.cpp  actiondata.h  actiondata_p.h  actionmodel.cpp  actionmodel.h  actionmodel_p.h  keysequencehelper.cpp  keysequencehelper_p.h  qmlactioncollection.cpp  qmlactioncollection_p.h  qmlactiondata.cpp  qmlactiondata_p.h  standardactioncollection.cpp  standardactioncollection.h  standardactiondata.cpp  standardactiondata.h  standardactiondata_p.h
src/actioncollection/: CMakeLists.txt  Messages.sh  actioncollection.cpp  actioncollection.h  actioncollection_p.h  actioncollections.cpp  actioncollections.h  actioncollections_p.h  actiondata.cpp  actiondata_p.h  actionmodel.cpp  actionmodel_p.h  keysequencehelper.cpp  keysequencehelper_p.h  kirigamiactioncollection-index.qdoc  kirigamiactioncollection.qdoc  kirigamiactioncollection.qdocconf  qmlactioncollection.cpp  qmlactioncollection_p.h  standardactiondata.cpp  standardactiondata_p.h
src/actioncollection/qml/: ActionCollectionManager.qml  ActionsExplorer.qml  KeySequenceItem.qml  ShortcutsEditor.qml
src/qml/: ActionCollectionManager.qml  ActionsExplorer.qml  KQuickCommandBarPage.qml  KeySequenceItem.qml  ShortcutsEditor.qml
tests/: example.qml
